# insurance-claimer-project

./: LICENSE  README.md  init_setup.sh  project_steps.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
