# Here we are storing meta data information of the setup file and licenses details and then we want to mention the classifier where we define the python versions first on which our package can work and then we specify that our code will be os independent

[metadata]
license = MIT
license_file= LICENSE
classifier=
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
# [options] --> Here we specify is that except our requirements for this work if we need anything 3rd party package then that we have mentioned here and then we can mention bare minimum python version where my code can work if i try to create a new environment less than that version code will not run
[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7
# [options.extras_require] we specify some extra options like testing here we mentioned all the libraries which will be used for different test cases such as pytest,mypy,flake8,tox,black.
[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0
# [options.package_data] we specify that if we have some empty files code will not throw any error bcz we have __init__.py which can be blank always thats why we specified py.typed
[options.package_data]
insurance_claim = py.typed
# [flake8] will check in my codes the length of code lines maximum 160 and it will not check __init__.py since i mention it on exclude
[flake8]
max-line-length = 160
exclude = __init__.py